--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -28,7 +28,9 @@
 * 가능한 한 중단된 작업을 다시 계속할 수 있어야 한다.
 	* 대량의 데이터를 처리하는 동안 입력 데이터의 오류가 있거나 시스템 자체의 이상이 발생했을때 대비한 방어 대책도 생각해 둬야 한다. 데이터가 많으면 당연히 처리가 오래걸리는데 중단되고 복구가 될때 까지는 얼마나 시간이 걸릴지 모른다. 따라서 부작용을 줄이기 위해 작업을 이어서 처리하거나 처리 자체를 처음부터 재처리할 수 있도록 만들 필요가 있다. 
 * 다양한 실행 조건을 지원해야 한다
-	* 특정 시간이 되면 잡 스케줄러가 배치처리를 위한 프로세스를 기동하고, 완료되면 프로세스를 종료시킨다거나, 프로세스를 항상 상주시켜 놓은 상태에서 수시로 배치처리를 기동하는 등 다양한 실행
+	* 특정 시간이 되면 잡 스케줄러가 배치처리를 위한 프로세스를 기동하고, 완료되면 프로세스를 종료시킨다거나, 프로세스를 항상 상주시켜 놓은 상태에서 수시로 배치처리를 기동하는 등 다양한 실행 방식을 수용해야 한다.
+* 다양한 입출력 인터페이스를 다룰 수 있어야 한다.
+	* 
 
 
 
@@ -38,7 +40,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTIwODk1NjIsLTM4MjEwNjg5NCwxND
-M0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0
-NjMsODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbLTQzNzExNDU2NiwtMzgyMTA2ODk0LDE0Mz
+QzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2
+Myw4ODg5Nzc2MDddfQ==
 -->
