books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -30,8 +30,9 @@
 * 다양한 실행 조건을 지원해야 한다
 	* 특정 시간이 되면 잡 스케줄러가 배치처리를 위한 프로세스를 기동하고, 완료되면 프로세스를 종료시킨다거나, 프로세스를 항상 상주시켜 놓은 상태에서 수시로 배치처리를 기동하는 등 다양한 실행 방식을 수용해야 한다.
 * 다양한 입출력 인터페이스를 다룰 수 있어야 한다.
-	* 
+	* 외부 시스템과 연계할 때는 DB는 물론 CSV나 XML과 같은 다양한 파일도 지원해야 한다. 다양한 입출력을 다룰 수 있는 구조라면 배치 처리가 훨씬 쉬워진다.
 
+일반적으로 배치 처리를 위해 실행되는 애플리케이션을 배치 애플리케이션이라고 하는데, 스프링 배치는 자바로 배치 애플리케이션을 개발할때 활용 할 수 있는 프레이
 
 
 
@@ -40,7 +41,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQzNzExNDU2NiwtMzgyMTA2ODk0LDE0Mz
-QzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2
-Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbLTE5NzI4ODM0NTgsLTM4MjEwNjg5NCwxND
+M0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0
+NjMsODg4OTc3NjA3XX0=
 -->
