books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -32,16 +32,21 @@
 * 다양한 입출력 인터페이스를 다룰 수 있어야 한다.
 	* 외부 시스템과 연계할 때는 DB는 물론 CSV나 XML과 같은 다양한 파일도 지원해야 한다. 다양한 입출력을 다룰 수 있는 구조라면 배치 처리가 훨씬 쉬워진다.
 
-일반적으로 배치 처리를 위해 실행되는 애플리케이션을 배치 애플리케이션이라고 하는데, 스프링 배치는 자바로 배치 애플리케이션을 개발할때 활용 할 수 있는 프레임워크로 앞선 각종 요건을 이미 갖추고 있다.
+> delayed batch, on-line batch?
+
+
 
 
 
 ## Spring Batch
 
+스프링 배치는 자바로 배치 애플리케이션을 개발할때 활용 할 수 있는 프레임워크로 앞선 각종 요건을 이미 갖추고 있다.
+
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzI0OTM1MzAwLC0zODIxMDY4OTQsMTQzND
-M1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1NDYz
-LDg4ODk3NzYwN119
+eyJoaXN0b3J5IjpbLTE1NzI3MDAxOTcsLTM4MjEwNjg5NCwxND
+M0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0
+NjMsODg4OTc3NjA3XX0=
 -->
