books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -34,7 +34,7 @@
 
 > delayed batch, on-line batch?
 
-
+delayed batch는 잦은 빈도로 배치가 처리되지 않고 응답속도가 느려도 상관이 없는 일반적인 
 
 
 
@@ -46,7 +46,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NzI3MDAxOTcsLTM4MjEwNjg5NCwxND
-M0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0
-NjMsODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbLTQ0MDU3OTI5OCwtMzgyMTA2ODk0LDE0Mz
+QzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2
+Myw4ODg5Nzc2MDddfQ==
 -->
