books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -34,7 +34,9 @@
 
 > delayed batch, on-line batch?
 
-delayed batch는 잦은 빈도로 배치가 처리되지 않고 응답속도가 느려도 상관이 없는 일반적인 
+delayed batch는 잦은 빈도로 배치가 처리되지 않아도 되고 보통 대량의 데이터를 취급하는 일반적인 배치
+
+on-line batch는 
 
 
 
@@ -46,7 +48,7 @@ delayed batch는 잦은 빈도로 배치가 처리되지 않고 응답속도가 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ0MDU3OTI5OCwtMzgyMTA2ODk0LDE0Mz
+eyJoaXN0b3J5IjpbMTMzMTk5OTQ3MywtMzgyMTA2ODk0LDE0Mz
 QzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2
 Myw4ODg5Nzc2MDddfQ==
 -->
