--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -34,9 +34,9 @@
 
 > delayed batch, on-line batch?
 
-delayed batch는 잦은 빈도로 배치가 처리되지 않아도 되고 보통 대량의 데이터를 취급하는 일반적인 배치
+지연된 배치(delayed batch)는 배치처리가 적은 빈도로 실행되고 보통 대량의 데이터를 취급하는 일반적인 배치.
 
-on-line batch는 
+온라인 배치(on-line batch는 상당히 높은 빈도로 배치를 처리해야하는 경우
 
 
 
@@ -48,7 +48,7 @@ on-line batch는
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMzMTk5OTQ3MywtMzgyMTA2ODk0LDE0Mz
-QzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2
-Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbLTEzNzA3MTExNzEsLTM4MjEwNjg5NCwxND
+M0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0
+NjMsODg4OTc3NjA3XX0=
 -->
