books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -35,10 +35,7 @@
 > delayed batch, on-line batch?
 
 지연된 배치(delayed batch)는 배치처리가 적은 빈도로 실행되고 보통 대량의 데이터를 취급하는 일반적인 배치.
-
-온라인 배치(on-line batch)는 상당히 높은 빈도로  배치 처리해야하는 경우에 많이 쓰인다. 가령 온라인 애플리케이션과 연관되어 웹 화면에서 특정 업무의 상세 보고서를 출력해야 하는 상황이라면 온라인 처리에서는 사용자의 보고서 출력 요청만 접수하고 실제 보고서 생성 내부 동작은 배치러이에 위임해서 처리하게 된다. 이런 조합ㅇ
-
-
+온라인 배치(on-line batch)는 상당히 높은 빈도로  배치 처리해야하는 경우에 많이 쓰인다. 가령 온라인 애플리케이션과 연관되어 웹 화면에서 특정 업무의 상세 보고서를 출력해야 하는 상황이라면 온라인 처리에서는 사용자의 보고서 출력 요청만 접수하고 실제 보고서 생성 내부 동작은 배치러이에 위임해서 처리하게 된다. 이런 조합은 응답 속도, 처리 성능면 모두 좋다. 
 
 ## Spring Batch
 
@@ -48,7 +45,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2OTk1NTkyNSwtMzgyMTA2ODk0LDE0Mz
-QzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2
-Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0Mz
+UyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMs
+ODg4OTc3NjA3XX0=
 -->
