books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -39,13 +39,15 @@
 
 ## Spring Batch
 
-스프링 배치는 자바로 배치 애플리케이션을 개발할때 활용 할 수 있는 프레임워크로 앞선 각종 요건을 이미 갖추고 있다.
+> Spring Batch?
+
+스프링 배치는 **배치 애플리케이션 프레임워크**이다. 스프링이 가지고 있던 DI 컨테이너나 AOP, 트랜잭션 관리 기능은 기본으로 가지고 있다. 더욱이 앞각종 요건을 이미 갖추고 있다. 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0Mz
-UyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMs
-ODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbLTEyMzYxMDM4NTgsMTYwODI2OTQsLTM4Mj
+EwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0
+OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
 -->
