books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -41,13 +41,13 @@
 
 > Spring Batch?
 
-스프링 배치는 **배치 애플리케이션 프레임워크**이다. 스프링이 가지고 있던 DI 컨테이너나 AOP, 트랜잭션 관리 기능은 기본으로 가지고 있다. 더욱이 앞각종 요건을 이미 갖추고 있다. 
+스프링 배치는 **배치 애플리케이션 프레임워크**이다. 스프링이 가지고 있던 DI 컨테이너나 AOP, 트랜잭션 관리 기능은 기본으로 가지고 있다. 더욱이 앞서 이야기한 배치 처리를 위한 각종 요건을 이미 갖추고 있다. 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMzYxMDM4NTgsMTYwODI2OTQsLTM4Mj
-EwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0
-OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbMTU5ODY4NzI4MiwxNjA4MjY5NCwtMzgyMT
+A2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5
+LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
 -->
