books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -43,11 +43,16 @@
 
 스프링 배치는 **배치 애플리케이션 프레임워크**이다. 스프링이 가지고 있던 DI 컨테이너나 AOP, 트랜잭션 관리 기능은 기본으로 가지고 있다. 더욱이 앞서 이야기한 배치 처리를 위한 각종 요건을 이미 갖추고 있다. 
 
+* 처리 흐름을 정형화 
+	* 단순한 형태의 Tasklet 방식
+		* SQL을 한번 실행하거나, 명령을 실행하는 수준의 단순한 처리에 적합
+		* 대량의 데이터를 처리하는 청크 방식
+
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU5ODY4NzI4MiwxNjA4MjY5NCwtMzgyMT
-A2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5
-LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbMzM1MTcwNjM5LDE2MDgyNjk0LC0zODIxMD
+Y4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDks
+ODU5NTU1NDYzLDg4ODk3NzYwN119
 -->
