books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -46,13 +46,16 @@
 * 처리 흐름을 정형화 
 	* 단순한 형태의 Tasklet 방식
 		* SQL을 한번 실행하거나, 명령을 실행하는 수준의 단순한 처리에 적합
-		* 대량의 데이터를 처리하는 청크 방식
+	* 대량의 데이터를 처리하는 청크(Chunk) 방식
+			* 데이터의 수집, 가공, 출력과 같은 처리 흐름을 정형화 해서 필요한 부분만 구현한다. 일정 건수가 되었을때 처리하는 트랜잭션은 스프링 배치가 처리한다.
+* 다양한 실행 방법을 제공한다.
+* 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzM1MTcwNjM5LDE2MDgyNjk0LC0zODIxMD
+eyJoaXN0b3J5IjpbNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMD
 Y4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDks
 ODU5NTU1NDYzLDg4ODk3NzYwN119
 -->
