books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -49,19 +49,21 @@
 	* 대량의 데이터를 처리하는 청크(Chunk) 방식
 			* 데이터의 수집, 가공, 출력과 같은 처리 흐름을 정형화 해서 필요한 부분만 구현한다. 일정 건수가 되었을때 처리하는 트랜잭션은 스프링 배치가 처리한다.
 * 다양한 실행 방법을 제공한다.
-	* 
+	* 명령행 실행, 서블릿에서 실행 등 다양한 실행법
 * 다양한 데이터 형식으로 입출려할 수 있다.
+	* 파일, DB, 메세지 큐 같은 데이터 소스의 입출력을 간단히 처리할 수 있다.
 * 배치 처리를 효율적으로 수행할 수 있다.
 	* 다중 실행, 병렬 실행, 조건 분기등의 처리방식으로 상황에 맞는 효율적인 처리방법을 선택
 * 잡을 관리 할 수 있다
 	* 잡이 실행되던 상황을 저장하거나 재시작 할 수 있다.
-* 
+
+## Spring Batch의 기본 구조
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTQyOTE1ODk3LDcwMDkyMzYzMywxNjA4Mj
+eyJoaXN0b3J5IjpbODkwNDA0MjQ5LDcwMDkyMzYzMywxNjA4Mj
 Y5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0x
 NzMxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
 -->
