books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -60,17 +60,23 @@
 ## Spring Batch의 기본 구조
 
 
-
 ![enter image description here](https://t1.daumcdn.net/cfile/tistory/99E54D385AE6E8CD08)
 
+JobLauncher
+: 배치 애플리케이션 기동을 위한 인터페이스. 모든 배치 애플리케이션은 이 클래스를 통해 실행된다. 
 
+Job 
+: 배치 애플리케이션에서 일련의 처리과정을 하나의 단위로 만든 실행단위.
+
+Step
+: Job을 구성하느
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjU5Njk2ODE5LDE2OTQwMjU2NjksNzAwOT
+eyJoaXN0b3J5IjpbMTQ5OTg2OTIwLDE2OTQwMjU2NjksNzAwOT
 IzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzNDM1MjE1Niwy
 OTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1NDYzLDg4ODk3Nz
 YwN119
