books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -66,18 +66,18 @@ JobLauncher
 : 배치 애플리케이션 기동을 위한 인터페이스. 모든 배치 애플리케이션은 이 클래스를 통해 실행된다. 
 
 Job 
-: 배치 애플리케이션에서 일련의 처리과정을 하나의 단위로 만든 실행단위.
+: 배치 애플리케이션에서 일련의 처리과정을 하나로 묶어 만든 실행단위.
 
 Step
-: Job을 구성하느
+: Job을 구성하는 세부 처리 단위다. 하나의 잡은 다수의 Step으로 구성될 수 있다. 한 잡 처리를 여러 스텝으로 분할하면 세부 처리를 재사용하거나 병렬처리를 적용할 수 있고 조건 분기에 따른 제어도 가능하게 된다. Step은 청크방식이나 태스크릿 방식 중 한가지로 실행된다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ5OTg2OTIwLDE2OTQwMjU2NjksNzAwOT
-IzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzNDM1MjE1Niwy
-OTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1NDYzLDg4ODk3Nz
-YwN119
+eyJoaXN0b3J5IjpbLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMD
+kyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYs
+MjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nz
+c2MDddfQ==
 -->
