books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -69,7 +69,10 @@ Job
 : 배치 애플리케이션에서 일련의 처리과정을 하나로 묶어 만든 실행단위.
 
 Step
-: Job을 구성하는 세부 처리 단위다. 하나의 잡은 다수의 Step으로 구성될 수 있다. 한 잡 처리를 여러 스텝으로 분할하면 세부 처리를 재사용하거나 병렬처리를 적용할 수 있고 조건 분기에 따른 제어도 가능하게 된다. Step은 청크방식이나 태스크릿 방식 중 한가지로 실행된다. 
+: Job을 구성하는 세부 처리 단위다. 하나의 잡은 다수의 Step으로 구성될 수 있다. 한 잡 처리를 여러 스텝으로 분할하면 세부 처리를 재사용하거나 병렬처리를 적용할 수 있고 조건 분기에 따른 제어도 가능하게 된다. Step은 청크방식이나 태스크릿 방식 중 한가지로 실행된다. Chunk 방식은 일정량의 데이터를 한번에 몰아서 입력, 가공, 출력하는 방식을 말한다. 반면 태스크릿 방식은 처리 방법을 자유롭게 기술할 수 있는 방식을 말한다.
+
+ItemReader, ItemProcessor, ItemWriter
+: 스텝을 데이터의 입력, 가공, 출력 세 가지 패턴 처리로 분할하기 위한 인터페이스이다. 배치 애플리케이션의 대부분이 이 세가지 패턴으
 
 
 
@@ -77,7 +80,7 @@ Step
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk2MzI5NjI2MSwtODE5MzkyMjQzLDE2OT
+eyJoaXN0b3J5IjpbMjA5MzU2ODQ5NiwtODE5MzkyMjQzLDE2OT
 QwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQs
 MTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NT
 U1NDYzLDg4ODk3NzYwN119
