--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -72,7 +72,10 @@ Step
 : Job을 구성하는 세부 처리 단위다. 하나의 잡은 다수의 Step으로 구성될 수 있다. 한 잡 처리를 여러 스텝으로 분할하면 세부 처리를 재사용하거나 병렬처리를 적용할 수 있고 조건 분기에 따른 제어도 가능하게 된다. Step은 청크방식이나 태스크릿 방식 중 한가지로 실행된다. Chunk 방식은 일정량의 데이터를 한번에 몰아서 입력, 가공, 출력하는 방식을 말한다. 반면 태스크릿 방식은 처리 방법을 자유롭게 기술할 수 있는 방식을 말한다.
 
 ItemReader, ItemProcessor, ItemWriter
-: 스텝을 데이터의 입력, 가공, 출력 세 가지 패턴 처리로 분할하기 위한 인터페이스이다. 배치 애플리케이션의 대부분이 이 세가지 패턴으
+: 스텝을 데이터의 입력, 가공, 출력 세 가지 패턴 처리로 분할하기 위한 인터페이스이다. 배치 애플리케이션의 대부분이 이 세가지 패턴으로 구성된다는 점에 착안에 Chunk방식을 구현할때 이 세 가지 패턴을 사용한다. 
+
+JobRepository 
+: 잡이나 스텝의 상태를 관리한다. 이 정보들은 스프링 배치가 정의한 테이블 스키마 형태로 데이터 베이스에 저장된다. 
 
 
 
@@ -80,8 +83,8 @@ ItemReader, ItemProcessor, ItemWriter
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA5MzU2ODQ5NiwtODE5MzkyMjQzLDE2OT
-QwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQs
-MTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NT
-U1NDYzLDg4ODk3NzYwN119
+eyJoaXN0b3J5IjpbLTEzMjY0ODI5ODksLTgxOTM5MjI0MywxNj
+k0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0
+LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OT
+U1NTQ2Myw4ODg5Nzc2MDddfQ==
 -->
