books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -77,13 +77,16 @@ ItemReader, ItemProcessor, ItemWriter
 JobRepository 
 : 잡이나 스텝의 상태를 관리한다. 이 정보들은 스프링 배치가 정의한 테이블 스키마 형태로 데이터 베이스에 저장된다. 
 
+## Spring Batch의 아키텍처
+
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMjY0ODI5ODksLTgxOTM5MjI0MywxNj
+eyJoaXN0b3J5IjpbLTE0NTM1NjM3MTUsLTgxOTM5MjI0MywxNj
 k0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0
 LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OT
 U1NTQ2Myw4ODg5Nzc2MDddfQ==
