books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -79,15 +79,22 @@ JobRepository
 
 ## Spring Batch의 아키텍처
 
+* 잡 플로우(Job Flow)
+	* 선행 잡의 처리 결과를 보고 후행 잡의 실행 여부를 결정한다거나 여러개의 잡을 병행 처리하는 등의 유연한 처리 흐름을 정의할 수 있다.
+* 스케줄링
+	* 잡의 실행 시간이나 실행 주기를 정의할 수 있다.
+* 실행관리
+	* 정상 종료한 잡의 실행 이력을 확인하거나 비정상적으로 종료한 잡을 재처리할 수 있다.
 
+잡 스케줄러가 잡을 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NTM1NjM3MTUsLTgxOTM5MjI0MywxNj
-k0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0
-LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OT
-U1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbMTczMDEyOTAxMywtMTQ1MzU2MzcxNSwtOD
+E5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0
+LC0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3Mz
+ExMzg3NDksODU5NTU1NDYzLDg4ODk3NzYwN119
 -->
