--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -86,15 +86,15 @@ JobRepository
 * 실행관리
 	* 정상 종료한 잡의 실행 이력을 확인하거나 비정상적으로 종료한 잡을 재처리할 수 있다.
 
-잡 스케줄러가 잡을 
+잡 스케줄러가 잡을 실행할때는 매번 잡을 실행할 때마다 자바 프로스세를 기동하고, 처리가 완료되면 그 프로세스를 종료하는 방식으로 동작한다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczMDEyOTAxMywtMTQ1MzU2MzcxNSwtOD
-E5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0
-LC0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3Mz
-ExMzg3NDksODU5NTU1NDYzLDg4ODk3NzYwN119
+eyJoaXN0b3J5IjpbLTExOTY3MjAyNzAsLTE0NTM1NjM3MTUsLT
+gxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5
+NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNz
+MxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
 -->
