books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -88,13 +88,15 @@ JobRepository
 
 잡 스케줄러가 잡을 실행할때는 매번 잡을 실행할 때마다 자바 프로스세를 기동하고, 처리가 완료되면 그 프로세스를 종료하는 방식으로 동작한다. 
 
+스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면
+
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExOTY3MjAyNzAsLTE0NTM1NjM3MTUsLT
-gxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5
-NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNz
-MxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbLTQ5MDg0MzI3NSwtMTQ1MzU2MzcxNSwtOD
+E5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0
+LC0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3Mz
+ExMzg3NDksODU5NTU1NDYzLDg4ODk3NzYwN119
 -->
