--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -79,6 +79,8 @@ JobRepository
 
 ## Spring Batch의 아키텍처
 
+일반적인 엔터프라이즈 환경의 시스템에서는 다수의 잡을 실행할때 선행/후행 관계에 따라 잡을 실행하는데 이때 배치
+
 * 잡 플로우(Job Flow)
 	* 선행 잡의 처리 결과를 보고 후행 잡의 실행 여부를 결정한다거나 여러개의 잡을 병행 처리하는 등의 유연한 처리 흐름을 정의할 수 있다.
 * 스케줄링
@@ -88,14 +90,14 @@ JobRepository
 
 잡 스케줄러가 잡을 실행할때는 매번 잡을 실행할 때마다 자바 프로스세를 기동하고, 처리가 완료되면 그 프로세스를 종료하는 방식으로 동작한다. 
 
-스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면
+스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면, 스프링 배치가 잡 스케줄러의 역할을 하고 스프링 배치의 스텝이 잡과 비슷한 기을 한다.
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ5MDg0MzI3NSwtMTQ1MzU2MzcxNSwtOD
+eyJoaXN0b3J5IjpbLTU2OTQ3NjMxNSwtMTQ1MzU2MzcxNSwtOD
 E5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0
 LC0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3Mz
 ExMzg3NDksODU5NTU1NDYzLDg4ODk3NzYwN119
