books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -79,7 +79,7 @@ JobRepository
 
 ## Spring Batch의 아키텍처
 
-일반적인 엔터프라이즈 환경의 시스템에서는 다수의 잡을 실행할때 선행/후행 관계에 따라 잡을 실행하는데 이때 배치
+일반적인 엔터프라이즈 환경의 시스템에서는 다수의 잡을 실행할때 선행/후행 관계에 따라 잡을 실행하는데 이때 배치 처리의 실행을 관리하는것일 잡 스케줄러이다. 잡 스케줄러는 아래와 같은 기능을 제공한다.
 
 * 잡 플로우(Job Flow)
 	* 선행 잡의 처리 결과를 보고 후행 잡의 실행 여부를 결정한다거나 여러개의 잡을 병행 처리하는 등의 유연한 처리 흐름을 정의할 수 있다.
@@ -97,7 +97,7 @@ JobRepository
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU2OTQ3NjMxNSwtMTQ1MzU2MzcxNSwtOD
+eyJoaXN0b3J5IjpbLTc5OTc3MTA1NCwtMTQ1MzU2MzcxNSwtOD
 E5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0
 LC0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3Mz
 ExMzg3NDksODU5NTU1NDYzLDg4ODk3NzYwN119
