books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -79,6 +79,8 @@ JobRepository
 
 ## Spring Batch의 아키텍처
 
+### 일반적인 잡 스케쥴러
+
 일반적인 엔터프라이즈 환경의 시스템에서는 다수의 잡을 실행할때 선행/후행 관계에 따라 잡을 실행하는데 이때 배치 처리의 실행을 관리하는것일 잡 스케줄러이다. 잡 스케줄러는 아래와 같은 기능을 제공한다.
 
 * 잡 플로우(Job Flow)
@@ -88,17 +90,23 @@ JobRepository
 * 실행관리
 	* 정상 종료한 잡의 실행 이력을 확인하거나 비정상적으로 종료한 잡을 재처리할 수 있다.
 
-잡 스케줄러가 잡을 실행할때는 매번 잡을 실행할 때마다 자바 프로스세를 기동하고, 처리가 완료되면 그 프로세스를 종료하는 방식으로 동작한다. 
+잡 스케줄러가 잡을 실행할때는 매번 잡을 실행할 때마다 자바 프로스세스를 기동하고, 처리가 완료되면 그 프로세스를 종료하는 방식
+으로 동작한다. 
 
-스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면, 스프링 배치가 잡 스케줄러의 역할을 하고 스프링 배치의 스텝이 잡과 비슷한 기을 한다.
+스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면, 스프링 배치가 잡 스케줄러의 역할을 하고 스프링 배치의 스텝이 잡과 비슷한 역할을 한다. 스브링 배치가 스텝의 흐름제어(flow control)을 하거나 스텝 단위로 
+
+
+### 
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc5OTc3MTA1NCwtMTQ1MzU2MzcxNSwtOD
-E5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0
-LC0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3Mz
-ExMzg3NDksODU5NTU1NDYzLDg4ODk3NzYwN119
+eyJoaXN0b3J5IjpbMTQ4NzkyODc0NiwtNzk5NzcxMDU0LC0xND
+UzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2OSw3MDA5MjM2
+MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0MzUyMTU2LDI5MT
+g5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3
+XX0=
 -->
