books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -93,7 +93,10 @@ JobRepository
 잡 스케줄러가 잡을 실행할때는 매번 잡을 실행할 때마다 자바 프로스세스를 기동하고, 처리가 완료되면 그 프로세스를 종료하는 방식
 으로 동작한다. 
 
-스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면, 스프링 배치가 잡 스케줄러의 역할을 하고 스프링 배치의 스텝이 잡과 비슷한 역할을 한다. 스브링 배치가 스텝의 흐름제어(flow control)을 하거나 스텝 단위로 
+스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면, 스프링 배치가 잡 스케줄러의 역할을 하고 스프링 배치의 스텝이 잡과 비슷한 역할을 한다. 스브링 배치가 스텝의 흐름제어(flow control)을 하거나 스텝 단위로 실행관리를 하고 있어서 마치 스케줄러의 기능을 대신하는것으로 보이기 때문이다. 
+
+
+
 
 
 ### 
@@ -104,9 +107,9 @@ JobRepository
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ4NzkyODc0NiwtNzk5NzcxMDU0LC0xND
-UzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2OSw3MDA5MjM2
-MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0MzUyMTU2LDI5MT
-g5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3
-XX0=
+eyJoaXN0b3J5IjpbNTU2Nzc0NywtNzk5NzcxMDU0LC0xNDUzNT
+YzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMs
+MTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MT
+I4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
+
 -->
