books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -95,21 +95,22 @@ JobRepository
 
 스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면, 스프링 배치가 잡 스케줄러의 역할을 하고 스프링 배치의 스텝이 잡과 비슷한 역할을 한다. 스브링 배치가 스텝의 흐름제어(flow control)을 하거나 스텝 단위로 실행관리를 하고 있어서 마치 스케줄러의 기능을 대신하는것으로 보이기 때문이다. 
 
+### Spring Batch 
 
+![enter image description here](https://terasoluna-batch.github.io/guideline/5.0.0.RELEASE/en/images/ch02/SpringBatchArchitecture/Ch02_SpringBatchArchitecture_Architecture_ProcessFlow.png) 
 
-
-
-### 
-
+|구성요소|역할|
+|--|--|
+|  |  |
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTU2Nzc0NywtNzk5NzcxMDU0LC0xNDUzNT
-YzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMs
-MTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MT
-I4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
-
+eyJoaXN0b3J5IjpbMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NT
+M1NjM3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYz
+MywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxOD
+kxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nzc2MDdd
+fQ==
 -->
