--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -101,16 +101,16 @@ JobRepository
 
 |구성요소|역할|
 |--|--|
-|  |  |
+|JobInstacne|JobInstance는 잡을 논리적인 실행형태로 본 개념이다. 예를 들어 하나의 잡을 시  |
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NT
-M1NjM3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYz
-MywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxOD
-kxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nzc2MDdd
-fQ==
+eyJoaXN0b3J5IjpbOTA4MTM3Njg5LDE4NDE0NzcxNCwtNzk5Nz
+cxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2
+OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0Mz
+UyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMs
+ODg4OTc3NjA3XX0=
 -->
