--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -101,16 +101,19 @@ JobRepository
 
 |구성요소|역할|
 |--|--|
-|JobInstacne|JobInstance는 잡을 논리적인 실행형태로 본 개념이다. 예를 들어 하나의 잡을 시  |
+|JobInstacne|JobInstance는 잡을 논리적인 실행형태로 본 개념이다. 예를 들어 하나의 잡을 실행 후 다시 같은 잡을 실행하면 앞에 실행한 잡과 뒤에 실행한 잡은 서로 다른 JobInstance이다. 한편 하나의 잡을 실행하던 도중에 오류가 발생하여 처리가 중단 되었고, 이후 같은 잡을 다시 재처리하는 경우는 앞뒤 잡을 똑같은 JobInstacne라고 본다.|
+|JobInstacne|JobInstance는 잡을 논리적인 실행형태로 본 개념이다. 예를 들어 하나의 잡을 실행 후 다시 같은 잡을 실행하면 앞에 실행한 잡과 뒤에 실행한 잡은 서로 다른 JobInstance이다. 한편 하나의 잡을 실행하던 도중에 오류가 발생하여 처리가 중단 되었고, 이후 같은 잡을 다시 재처리하는 경우는 앞뒤 잡을 똑같은 JobInstacne라고 본다.  |
+
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTA4MTM3Njg5LDE4NDE0NzcxNCwtNzk5Nz
-cxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2
-OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0Mz
-UyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMs
-ODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbMjA3NTk0MTM1NiwxODQxNDc3MTQsLTc5OT
+c3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2
+NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzND
+M1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1NDYz
+LDg4ODk3NzYwN119
 -->
