books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -102,7 +102,7 @@ JobRepository
 |구성요소|역할|
 |--|--|
 |JobInstacne|JobInstance는 잡을 논리적인 실행형태로 본 개념이다. 예를 들어 하나의 잡을 실행 후 다시 같은 잡을 실행하면 앞에 실행한 잡과 뒤에 실행한 잡은 서로 다른 JobInstance이다. 한편 하나의 잡을 실행하던 도중에 오류가 발생하여 처리가 중단 되었고, 이후 같은 잡을 다시 재처리하는 경우는 앞뒤 잡을 똑같은 JobInstacne라고 본다.|
-|JobExcution|JobExcution은 잡을 물리적인 실행 형태로 본 개념이다. JobInstance와 차이점은 같은 잡을 다시 한번 재처리하는 경우 첫번째 JobInstacne와 두번째 JobInstance는 같지만 JobExcution은 다르다. |
+|JobExcution, ExcutionContext|JobExcution은 잡을 물리적인 실행 형태로 본 개념이다. JobInstance와 차이점은 같은 잡을 다시 한번 재처리하는 경우 첫번째 JobInstacne와 두번째 JobInstance는 같지만 JobExcution은 다르다. ExcutionContext는 같은 JobExcution안에서 배치 처리의 진척 상태 같은 메타데이터를 공유할때 사용하는 영역으로, 주로 스프링 배치 프레임워크가 상태를 기록할때 상|
 
 
 
@@ -111,7 +111,7 @@ JobRepository
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkzODY1NzExOSwxODQxNDc3MTQsLTc5OT
+eyJoaXN0b3J5IjpbMTg0MjYzMTU4MSwxODQxNDc3MTQsLTc5OT
 c3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2
 NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzND
 M1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1NDYz
