books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -103,7 +103,8 @@ JobRepository
 |--|--|
 |JobInstacne|JobInstance는 잡을 논리적인 실행형태로 본 개념이다. 예를 들어 하나의 잡을 실행 후 다시 같은 잡을 실행하면 앞에 실행한 잡과 뒤에 실행한 잡은 서로 다른 JobInstance이다. 한편 하나의 잡을 실행하던 도중에 오류가 발생하여 처리가 중단 되었고, 이후 같은 잡을 다시 재처리하는 경우는 앞뒤 잡을 똑같은 JobInstacne라고 본다.|
 |JobExcution ExcutionContext|JobExcution은 잡을 물리적인 실행 형태로 본 개념이다. JobInstance와 차이점은 같은 잡을 다시 한번 재처리하는 경우 첫번째 JobInstacne와 두번째 JobInstance는 같지만 JobExcution은 다르다. ExcutionContext는 같은 JobExcution안에서 배치 처리의 진척 상태 같은 메타데이터를 공유할때 사용하는 영역으로, 주로 스프링 배치 프레임워크가 상태를 기록할때 사용하고 애플리케이션에서도 이 영역을 활용할 수 있다.|
-|StepExecution ExcutionContext|StepExecution은 스텝을 물리적인 실행 형태로 본 개념이다. JobExecution과 마찬가지로 StepExecution에서도 ExcutionContext는 같은 StepExecution안에서 데이터를 공유하기 위한 영역이 있다. 데이터의 성격상 굳이 JobExecution안에 공유할 내용이 아닌 경우라면 StepExcution에서 ㄱ|
+|StepExecution ExcutionContext|StepExecution은 스텝을 물리적인 실행 형태로 본 개념이다. JobExecution과 마찬가지로 StepExecution에서도 ExcutionContext는 같은 StepExecution안에서 데이터를 공유하기 위한 영역이 있다. 데이터의 성격상 굳이 JobExecution안에 공유할 내용이 아닌 경우라면 StepExcution에서 공유하는 것이 정보은닉의 관점에서 유리할 수 있다.|
+|JobRepository|JobExecution이나 StepExecution의 배치 처리 결과나 상태를 관리하고 저장하는 기능을 제공한다. 일반적인 배치 애플리케이션은 자바 프로세스가 실행되면 처|
 
 
 
@@ -114,9 +115,9 @@ JobRepository
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcxMDA5MTU1LDE4NDE0NzcxNCwtNzk5Nz
-cxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2
-OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0Mz
-UyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMs
-ODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbLTEwMzAzMzcwMjIsMTg0MTQ3NzE0LC03OT
+k3NzEwNTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0MywxNjk0MDI1
+NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0Mz
+QzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2
+Myw4ODg5Nzc2MDddfQ==
 -->
