books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -95,7 +95,6 @@ JobRepository
 
 스프링 배치에서 스텝과 일반적인 잡 스케줄러의 잡을 비교해보면, 스프링 배치가 잡 스케줄러의 역할을 하고 스프링 배치의 스텝이 잡과 비슷한 역할을 한다. 스브링 배치가 스텝의 흐름제어(flow control)을 하거나 스텝 단위로 실행관리를 하고 있어서 마치 스케줄러의 기능을 대신하는것으로 보이기 때문이다. 
 
-### Spring Batch 
 
 ![enter image description here](https://terasoluna-batch.github.io/guideline/5.0.0.RELEASE/en/images/ch02/SpringBatchArchitecture/Ch02_SpringBatchArchitecture_Architecture_ProcessFlow.png) 
 
@@ -106,7 +105,9 @@ JobRepository
 |StepExecution ExcutionContext|StepExecution은 스텝을 물리적인 실행 형태로 본 개념이다. JobExecution과 마찬가지로 StepExecution에서도 ExcutionContext는 같은 StepExecution안에서 데이터를 공유하기 위한 영역이 있다. 데이터의 성격상 굳이 JobExecution안에 공유할 내용이 아닌 경우라면 StepExcution에서 공유하는 것이 정보은닉의 관점에서 유리할 수 있다.|
 |JobRepository|JobExecution이나 StepExecution의 배치 처리 결과나 상태를 관리하고 저장하는 기능을 제공한다. 배치는 작업 처리후 결과나 상태를 유지해야 하는데 이를 위해 메모리뿐만 아니라 데이터베이스에도 저장해야 한다. 데이터 베이스에 저장하기 위해서 JobExecution과 StepExecution을 담을 수 있는 테이블이나 시퀀스등 데이터베이스 오브젝트를 필요로 한다. 그래서 스프링 배치가 제공하는 스키마 정보를 참고하여 데이터베이스 오브젝트를 미리 만들어 둬야 한다.|
 
-스프링 배치가 이렇게 까지 메타 데이터를 관리하는 이유는 배치 작업 재처리를 위해 이전에 실행한 상태에 대한 스냅샷이 필요하기 때문이다. 
+스프링 배치가 이렇게 까지 메타 데이터를 관리하는 이유는 배치 작업 재처리를 위해 이전에 실행한 상태에 대한 스냅샷이 필요하기 때문이다.  메타 데이터와 JobRepository는 그러한 정보를 남기기 위해 기반이 되는 메커니즘이다. 
+
+
 
 
 
@@ -117,7 +118,7 @@ JobRepository
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAwODUxMjA5MiwxODQxNDc3MTQsLTc5OT
+eyJoaXN0b3J5IjpbMjEwMDQyNTUwNiwxODQxNDc3MTQsLTc5OT
 c3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2
 NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzND
 M1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1NDYz
