books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -79,7 +79,7 @@ JobRepository
 
 ## Spring Batch의 아키텍처
 
-### 일반적인 잡 스케쥴러
+### 구성요소
 
 일반적인 엔터프라이즈 환경의 시스템에서는 다수의 잡을 실행할때 선행/후행 관계에 따라 잡을 실행하는데 이때 배치 처리의 실행을 관리하는것일 잡 스케줄러이다. 잡 스케줄러는 아래와 같은 기능을 제공한다.
 
@@ -107,6 +107,9 @@ JobRepository
 
 스프링 배치가 이렇게 까지 메타 데이터를 관리하는 이유는 배치 작업 재처리를 위해 이전에 실행한 상태에 대한 스냅샷이 필요하기 때문이다.  메타 데이터와 JobRepository는 그러한 정보를 남기기 위해 기반이 되는 메커니즘이다. 
 
+### 잡 기동
+
+일반적인 방식으로는 셀 스크립트를 만들고 그 안에서 자바를 실행하도록 하는 것이 가낭 일반적일 것이
 
 
 
@@ -118,7 +121,7 @@ JobRepository
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEwMDQyNTUwNiwxODQxNDc3MTQsLTc5OT
+eyJoaXN0b3J5IjpbLTk2OTg3Mzk3MiwxODQxNDc3MTQsLTc5OT
 c3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2
 NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzND
 M1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1NDYz
