books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -109,7 +109,7 @@ JobRepository
 
 ### 잡 기동
 
-일반적인 방식으로는 셀 스크립트를 만들고 그 안에서 자바를 실행하도록 하는 것이 가낭 일반적일 것이
+일반적인 방식으로는 셀 스크립트를 만들고 그 안에서 자바를 실행하도록 하는 것이 가낭 일반적일 것이다. 특히 스프링 배치가 제공하는 CommandLineJobRunner를 쓰면 사용자가 정의한 스프링 배치의 잡을 쉽게 기동할 수 있다. 
 
 
 
@@ -121,9 +121,9 @@ JobRepository
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk2OTg3Mzk3MiwxODQxNDc3MTQsLTc5OT
-c3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2
-NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzND
-M1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1NDYz
-LDg4ODk3NzYwN119
+eyJoaXN0b3J5IjpbOTk1MDg0MTYxLDE4NDE0NzcxNCwtNzk5Nz
+cxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2
+OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0Mz
+UyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMs
+ODg4OTc3NjA3XX0=
 -->
