--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -109,7 +109,9 @@ JobRepository
 
 ### 잡 기동
 
-일반적인 방식으로는 셀 스크립트를 만들고 그 안에서 자바를 실행하도록 하는 것이 가낭 일반적일 것이다. 특히 스프링 배치가 제공하는 CommandLineJobRunner를 쓰면 사용자가 정의한 스프링 배치의 잡을 쉽게 기동할 수 있다. 
+일반적인 방식으로는 셀 스크립트를 만들고 그 안에서 자바를 실행하도록 하는 것이 가낭 일반적일 것이다. 특히 스프링 배치가 제공하는 CommandLineJobRunner를 쓰면 사용자가 정의한 스프링 배치의 잡을 쉽게 기동할 수 있다. CommandLineJobRunner는 실행할 Job의 이름뿐만 아니라 인수 값도 입력받는데 모든 인수는 입력값 검증을 마친 후에 JobE
+
+잡을 실행할때 잡의 이름을 지정할 수 있는데 이름은 DI 컨테이너에 등록된 빈의 이름과 같아야 하고 Job 인터페이스를 구현한 클래스여야 한다. 
 
 
 
@@ -121,9 +123,9 @@ JobRepository
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTk1MDg0MTYxLDE4NDE0NzcxNCwtNzk5Nz
-cxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2
-OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0Mz
-UyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMs
-ODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbLTE5MTM0NzUzNjgsOTk1MDg0MTYxLDE4ND
+E0NzcxNCwtNzk5NzcxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIy
+NDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4Mj
+EwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0
+OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
 -->
