books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -113,7 +113,9 @@ JobRepository
 
 **스프링 배치는 잡의 인수에 특별한 의미를 부여하는데 바로 잡의 이름과 인수가 같다면  같은 Job Instance로 간주하는 것이다.**
 
-Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인수가 같다면 똑같은 Job Instance로 식별한다. 따라서 만약 이전 잡이 실행 
+Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인수가 같다면 똑같은 Job Instance로 식별한다. 만약 이전 잡이 실행 도중에 실패했고, 재처리를 지원한다면 스프링 배치는 오류가 발생해서 중단됬던 잡을 다시 실행해 재처리를 하게 된다. 
+
+만약 재처리를 지원하지 않거나 이전에 실행된 잡이 정상적으로 종료된 상태라면 뒤
 
 
 잡을 실행할때 잡의 이름을 지정할 수 있는데 이름은 DI 컨테이너에 등록된 빈의 이름과 같아야 하고 Job 인터페이스를 구현한 클래스여야 한다. 
@@ -128,9 +130,9 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkzNjk0MDQ1MSw5OTUwODQxNjEsMTg0MT
-Q3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0
-MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMT
-A2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5
-LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbMjAwNjQ1ODI5LDk5NTA4NDE2MSwxODQxND
+c3MTQsLTc5OTc3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQz
+LDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMD
+Y4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDks
+ODU5NTU1NDYzLDg4ODk3NzYwN119
 -->
