books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -109,7 +109,15 @@ JobRepository
 
 ### 잡 기동
 
-일반적인 방식으로는 셀 스크립트를 만들고 그 안에서 자바를 실행하도록 하는 것이 가낭 일반적일 것이다. 특히 스프링 배치가 제공하는 CommandLineJobRunner를 쓰면 사용자가 정의한 스프링 배치의 잡을 쉽게 기동할 수 있다. CommandLineJobRunner는 실행할 Job의 이름뿐만 아니라 인수 값도 입력받는데 모든 인수는 입력값 검증을 마친 후에 JobExecution에 JobParameters로 변환되어 들어간다. 
+일반적인 방식으로는 셀 스크립트를 만들고 그 안에서 자바를 실행하도록 하는 것이 가낭 일반적일 것이다. 특히 스프링 배치가 제공하는 CommandLineJobRunner를 쓰면 사용자가 정의한 스프링 배치의 잡을 쉽게 기동할 수 있다. 잡을 실행할때 잡의 이름을 지정할 수 있는데 이름은 DI 컨테이너에 등록된 빈의 이름과 같아야 하고 Job 인터페이스를 구현한 클래스여야 한다. 
+
+```
+$ java -cp ${CLASSPATH} org
+
+```
+
+
+CommandLineJobRunner는 실행할 Job의 이름뿐만 아니라 인수 값도 입력받는데 모든 인수는 입력값 검증을 마친 후에 JobExecution에 JobParameters로 변환되어 들어간다. 
 
 **스프링 배치는 잡의 인수에 특별한 의미를 부여하는데 바로 잡의 이름과 인수가 같다면  같은 Job Instance로 간주하는 것이다.**
 
@@ -117,8 +125,9 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 만약 재처리를 지원하지 않거나 이전에 실행된 잡이 정상적으로 종료된 상태라면 뒤에 실행한 잡에서는 예외가 발생한다. 예를들어 같은 잡 이름과 같은 인수를 가진 잡이 이전에 정상적으로 종료되었다면, 재처리 잡 실행시 JobInstanceAlreadyCompleteException이 발생한다. 
 
+이러한 이유로 매일 반복해서 실행하는 배치에서는 스프링 배치가 잡을 고유한 잡으로 인식하도록 고유한 인수를 부여하는 기법이 필요하다. 
 
-잡을 실행할때 잡의 이름을 지정할 수 있는데 이름은 DI 컨테이너에 등록된 빈의 이름과 같아야 하고 Job 인터페이스를 구현한 클래스여야 한다. 
+
 
 
 
@@ -130,7 +139,7 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA5NDkzMzEwMyw5OTUwODQxNjEsMTg0MT
+eyJoaXN0b3J5IjpbLTc4NTI3NDgyOCw5OTUwODQxNjEsMTg0MT
 Q3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0
 MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMT
 A2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5
