--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -112,10 +112,8 @@ JobRepository
 일반적인 방식으로는 셀 스크립트를 만들고 그 안에서 자바를 실행하도록 하는 것이 가낭 일반적일 것이다. 특히 스프링 배치가 제공하는 CommandLineJobRunner를 쓰면 사용자가 정의한 스프링 배치의 잡을 쉽게 기동할 수 있다. 잡을 실행할때 잡의 이름을 지정할 수 있는데 이름은 DI 컨테이너에 등록된 빈의 이름과 같아야 하고 Job 인터페이스를 구현한 클래스여야 한다. 
 
 ```
-$ java -cp ${CLASSPATH} org
-
+$ java -cp ${CLASSPATH} org.springframework.batch.core.launch.support.CommandLineJobRunner <Config.class> <JobName> <JobParameter1>=<value1> ...
 ```
-
 
 CommandLineJobRunner는 실행할 Job의 이름뿐만 아니라 인수 값도 입력받는데 모든 인수는 입력값 검증을 마친 후에 JobExecution에 JobParameters로 변환되어 들어간다. 
 
@@ -139,9 +137,9 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4NTI3NDgyOCw5OTUwODQxNjEsMTg0MT
-Q3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0
-MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMT
-A2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5
-LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbLTExMTE2NjE5MTQsOTk1MDg0MTYxLDE4ND
+E0NzcxNCwtNzk5NzcxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIy
+NDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4Mj
+EwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0
+OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
 -->
