--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -125,7 +125,7 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 이러한 이유로 매일 반복해서 실행하는 배치에서는 스프링 배치가 잡을 고유한 잡으로 인식하도록 고유한 인수를 부여하는 기법이 필요하다. 
 
-
+> -next 
 
 
 
@@ -137,9 +137,9 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMTE2NjE5MTQsOTk1MDg0MTYxLDE4ND
-E0NzcxNCwtNzk5NzcxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIy
-NDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4Mj
-EwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0
-OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbMTEyMjg4OTE1NiwtMTExMTY2MTkxNCw5OT
+UwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3
+MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNj
+A4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgy
+LC0xNzMxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
 -->
