--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -125,7 +125,10 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 이러한 이유로 매일 반복해서 실행하는 배치에서는 스프링 배치가 잡을 고유한 잡으로 인식하도록 고유한 인수를 부여하는 기법이 필요하다. 
 
-> -next 
+> -next 옵션
+>  CommnadLineJobRunner를 동작할때 -next 옵션을 쓰면 같은 잡과 인수를 넣어도 내부적으로 고유한 인수를 생성하기 때문에 같은 잡 인스턴스를 피하도록 처리가 가능하다. 
+
+## 비즈니스 로직 처리
 
 
 
@@ -137,7 +140,7 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEyMjg4OTE1NiwtMTExMTY2MTkxNCw5OT
+eyJoaXN0b3J5IjpbLTE0NjgxNTIzMSwtMTExMTY2MTkxNCw5OT
 UwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3
 MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNj
 A4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgy
