books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -128,7 +128,9 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 > -next 옵션
 >  CommnadLineJobRunner를 동작할때 -next 옵션을 쓰면 같은 잡과 인수를 넣어도 내부적으로 고유한 인수를 생성하기 때문에 같은 잡 인스턴스를 피하도록 처리가 가능하다. 
 
-## 비즈니스 로직 처리
+### 비즈니스 로직 처리
+
+
 
 
 
@@ -140,9 +142,9 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NjgxNTIzMSwtMTExMTY2MTkxNCw5OT
-UwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3
-MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNj
-A4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgy
-LC0xNzMxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbLTIxMTI4ODA5ODQsLTExMTE2NjE5MTQsOT
+k1MDg0MTYxLDE4NDE0NzcxNCwtNzk5NzcxMDU0LC0xNDUzNTYz
+NzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMsMT
+YwODI2OTQsLTM4MjEwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MTI4
+MiwtMTczMTEzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
 -->
