books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -130,7 +130,9 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 ### 비즈니스 로직 처리
 
+스프링 배치에서는 step이라는 실행 단위가 있어
 
+![enter image description here](https://terasoluna-batch.github.io/guideline/5.0.0.RELEASE/en/images/ch02/SpringBatchArchitecture/Ch02_SpringBatchArchitecture_Architecture_StepTaskletFlow.png)
 
 
 
@@ -142,9 +144,10 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMTI4ODA5ODQsLTExMTE2NjE5MTQsOT
-k1MDg0MTYxLDE4NDE0NzcxNCwtNzk5NzcxMDU0LC0xNDUzNTYz
-NzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMsMT
-YwODI2OTQsLTM4MjEwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MTI4
-MiwtMTczMTEzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbMTI5OTc1NDM4OSwtMjExMjg4MDk4NCwtMT
+ExMTY2MTkxNCw5OTUwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEw
+NTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LD
+cwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIx
+NTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2Myw4OD
+g5Nzc2MDddfQ==
 -->
