books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -130,7 +130,7 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 ### 비즈니스 로직 처리
 
-스프링 배치에서는 step이라는 실행 단위가 있어 비즈니스 로직을 더 작은 단위로 쪼개는 것이 가능하다. 잡이 기동하면 그 안에 포함된 스텝
+스프링 배치에서는 step이라는 실행 단위가 있어 비즈니스 로직을 더 작은 단위로 쪼개는 것이 가능하다. 잡이 기동하면 그 안에 포함된 스텝도 함께 기동하고 결과적으로 StepExcution이 만들어진다. 스텝은 어디까지나 작업의 크기를 분할하기 위한 목적으로 만들어 졌기 때문에 실제 비지니스 로직의 구현 내용은 스텝이 호출하는 Tasklet에 담긴다. 아래 그림은 Step에서 태스크릿까지 처리 흐름을 나타낸다.
 
 ![enter image description here](https://terasoluna-batch.github.io/guideline/5.0.0.RELEASE/en/images/ch02/SpringBatchArchitecture/Ch02_SpringBatchArchitecture_Architecture_StepTaskletFlow.png)
 
@@ -144,10 +144,10 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNDY4NjY2NzYsLTIxMTI4ODA5ODQsLT
-ExMTE2NjE5MTQsOTk1MDg0MTYxLDE4NDE0NzcxNCwtNzk5Nzcx
-MDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2OS
-w3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0MzUy
-MTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMsOD
-g4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwtMT
+ExMTY2MTkxNCw5OTUwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEw
+NTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LD
+cwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIx
+NTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2Myw4OD
+g5Nzc2MDddfQ==
 -->
