books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -134,7 +134,11 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 ![enter image description here](https://terasoluna-batch.github.io/guideline/5.0.0.RELEASE/en/images/ch02/SpringBatchArchitecture/Ch02_SpringBatchArchitecture_Architecture_StepTaskletFlow.png)
 
+tasklet을 사용하는 방식에는 Chunk방식과 Tasklet방식 두가지가 있다. 
 
+#### Chunk
+
+Chunk는 데이터를 한건씩 처리가는 것이 아니라 일정 개수 단위(Chunk)로 처리하는 방식을 말한다. Chunk
 
 
 
@@ -144,10 +148,10 @@ Job Instance는 논리적인 실행 단위이기 때문에, 잡의 이름과 인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwtMT
-ExMTY2MTkxNCw5OTUwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEw
-NTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LD
-cwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIx
-NTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1NTQ2Myw4OD
-g5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbMTUzNzU4OTc5NiwxNzQ2ODQ1MzUyLC0yMT
+EyODgwOTg0LC0xMTExNjYxOTE0LDk5NTA4NDE2MSwxODQxNDc3
+MTQsLTc5OTc3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLD
+E2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4
+OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksOD
+U5NTU1NDYzLDg4ODk3NzYwN119
 -->
