books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -153,17 +153,26 @@ skippable-exception-classes 태그로 Job 설정을 하면된다.
 
 ItemProccessor의 경우, 비즈니스 로직이 들어가는 곳이기 때문에 기본적으로 제공하는 구현클래스는 많지 않다. 그래서 보통 개발자가 직접 구현을 한다.
 
-`
+```
+public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObject> {
+	@Override
+	public MyOutputObject process(MyInputObject item) {
+		//비즈니스 처리
+	}
+
+}
+
+```
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNTk0NjM2MzcsMTc0Njg0NTM1MiwtMj
-ExMjg4MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNjEsMTg0MTQ3
-NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0My
-wxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2
-ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LD
-g1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbOTIyNTA5MzI4LDE3NDY4NDUzNTIsLTIxMT
+I4ODA5ODQsLTExMTE2NjE5MTQsOTk1MDg0MTYxLDE4NDE0Nzcx
+NCwtNzk5NzcxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMT
+Y5NDAyNTY2OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5
+NCwxNDM0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NT
+k1NTU0NjMsODg4OTc3NjA3XX0=
 -->
