books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -158,10 +158,9 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 	@Override
 	public MyOutputObject process(MyInputObject item) {
 		//비즈니스 처리
+		return output;
 	}
-
 }
-
 ```
 
 
@@ -169,10 +168,10 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTIyNTA5MzI4LDE3NDY4NDUzNTIsLTIxMT
-I4ODA5ODQsLTExMTE2NjE5MTQsOTk1MDg0MTYxLDE4NDE0Nzcx
-NCwtNzk5NzcxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMT
-Y5NDAyNTY2OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5
-NCwxNDM0MzUyMTU2LDI5MTg5MTI4MiwtMTczMTEzODc0OSw4NT
-k1NTU0NjMsODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbLTE0MDcwMTEzOTYsOTIyNTA5MzI4LDE3ND
+Y4NDUzNTIsLTIxMTI4ODA5ODQsLTExMTE2NjE5MTQsOTk1MDg0
+MTYxLDE4NDE0NzcxNCwtNzk5NzcxMDU0LC0xNDUzNTYzNzE1LC
+04MTkzOTIyNDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMsMTYwODI2
+OTQsLTM4MjEwNjg5NCwxNDM0MzUyMTU2LDI5MTg5MTI4MiwtMT
+czMTEzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
 -->
