--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -162,19 +162,17 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 	}
 }
 ```
-
-스ㅡㅍ링 
-
+만약 일반적이지 않은 특수한 형식의 파일로 입출력해야 한다면 개발자가 직접 파일을 입출력하는
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEyOTM2MDk4MSwxNTU4ODQ5Njg4LC0xND
-A3MDExMzk2LDkyMjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgw
-OTg0LC0xMTExNjYxOTE0LDk5NTA4NDE2MSwxODQxNDc3MTQsLT
-c5OTc3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQw
-MjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMT
-QzNDM1MjE1NiwyOTE4OTEyODIsLTE3MzExMzg3NDksODU5NTU1
-NDYzXX0=
+eyJoaXN0b3J5IjpbLTE5NDk2NjQyMzMsMTU1ODg0OTY4OCwtMT
+QwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0NTM1MiwtMjExMjg4
+MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNjEsMTg0MTQ3NzE0LC
+03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0MywxNjk0
+MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0LD
+E0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1
+NTQ2M119
 -->
